--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@
 
 .container {
   margin: 0;
-  padding-top: 10vh;
+  padding: 5px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -48,6 +48,8 @@
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.7);
   transition: 0.3s;
   border-radius: 5px; /* 5px rounded corners */
+  min-width: 250px;
+  margin: 5px;
 }
 
 /* On mouse-over, add a deeper shadow */
